--- a/index.html
+++ b/index.html
@@ -4,38 +4,37 @@
 	<link rel="stylesheet" type="text/css" href="css/main.css">
 	<meta charset="utf-8">
 	<title>leenzery</title>
-	<meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
-	<p align="center" style="padding-top: 10%;"><img class="av" src="https://cdn.discordapp.com/avatars/377067781830475776/948bdfbf9c66680d7a1a4138a4e37a61.png?size=512" width="200" height="200"></p>
+	<p align="center" style="padding-top: 10%;"><img class="av" src="https://cdn.discordapp.com/avatars/377067781830475776/948bdfbf9c66680d7a1a4138a4e37a61.png?size=512" width="250" height="250"></p>
 	<h1 style="text-align:center;">leenzery</h1>
 	<p align="center">
 		<a href="https://github.com/leenzerydev">
-			<button class="mbtn">Github</button>
+			<button class="btn">Github</button>
 		</a>
 		<a href="https://t.me/leenzerydev">
-			<button class="mbtn">Telegram</button>
+			<button class="btn">Telegram</button>
 		</a>
 		<a href="https://vk.com/leenzerydev">
-			<button class="mbtn">VK</button>
+			<button class="btn">VK</button>
 		</a>
 		<a href="https://bedrock-land.cc">
-			<button class="mbtn">BedrockLand</button>
+			<button class="btn">BedrockLand</button>
 		</a>
 		<a href="https://www.youtube.com/channel/UCFeth1-5wYiqsXrp4imJulA">
-			<button class="mbtn">YouTube</button>
+			<button class="btn">YouTube</button>
 		</a>
 		<a href="https://twitter.com/leenzerydev">
-			<button class="mbtn">Twitter</button>
+			<button class="btn">Twitter</button>
 		</a>
 		<a href="https://www.instagram.com/leenzerydev/">
-			<button class="mbtn">Instagram</button>
+			<button class="btn">Instagram</button>
 		</a>
 		<a href="https://www.twitch.tv/leenzerydev">
-			<button class="mbtn">Twitch</button>
+			<button class="btn">Twitch</button>
 		</a>
 		<a href="https://discord.com/users/377067781830475776/">
-			<button class="mbtn">Discord</button>
+			<button class="btn">Discord</button>
 		</a>
 	</p>
 </body>
