--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 	<link rel="stylesheet" type="text/css" href="css/main.css">
 	<meta charset="utf-8">
 	<title>leenzery</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 </head>
 <body>
 	<p align="center" style="padding-top: 10%;"><img class="av" src="https://cdn.discordapp.com/avatars/377067781830475776/948bdfbf9c66680d7a1a4138a4e37a61.png?size=512" width="250" height="250"></p>
