update avatar url

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 </head>
 <body>
-	<p align="center" style="padding-top: 10%;"><img class="av" src="https://cdn.discordapp.com/avatars/377067781830475776/948bdfbf9c66680d7a1a4138a4e37a61.png?size=512" width="250" height="250"></p>
+	<p align="center" style="padding-top: 10%;"><img class="av" src="https://avatars.githubusercontent.com/u/63073463?v=4" width="250" height="250"></p>
 	<h1 style="text-align:center;">leenzery</h1>
 	<p align="center">
 		<a href="https://github.com/leenzerydev">
