мне нечем заняться

--- a/index.html
+++ b/index.html
@@ -7,36 +7,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 </head>
 <body>
-	<p align="center" style="padding-top: 10%;"><img class="av" src="https://avatars.githubusercontent.com/u/63073463?v=4" width="250" height="250"></p>
-	<h1 style="text-align:center;">leenzery</h1>
-	<p align="center">
-		<a href="https://github.com/leenzerydev">
-			<button class="btn">Github</button>
-		</a>
-		<a href="https://t.me/leenzerydev">
-			<button class="btn">Telegram</button>
-		</a>
-		<a href="https://vk.com/leenzerydev">
-			<button class="btn">VK</button>
-		</a>
-		<a href="https://bedrock-land.cc">
-			<button class="btn">BedrockLand</button>
-		</a>
-		<a href="https://www.youtube.com/channel/UCFeth1-5wYiqsXrp4imJulA">
-			<button class="btn">YouTube</button>
-		</a>
-		<a href="https://twitter.com/leenzerydev">
-			<button class="btn">Twitter</button>
-		</a>
-		<a href="https://www.instagram.com/leenzerydev/">
-			<button class="btn">Instagram</button>
-		</a>
-		<a href="https://www.twitch.tv/leenzerydev">
-			<button class="btn">Twitch</button>
-		</a>
-		<a href="https://discord.com/users/377067781830475776/">
-			<button class="btn">Discord</button>
-		</a>
-	</p>
+	<div class="container">
+		<p align="center" style="padding-top: 5%;"><img class="av" src="https://avatars.githubusercontent.com/u/63073463?v=4" width="250" height="250"></p>
+		<div class="centered">leenzery</div>
+	</div>
+	<form align="center">
+        <button class="btn" type="submit" formaction="https://github.com/leenzerydev">Github</button>
+		<button class="btn" type="submit" formaction="https://t.me/leenzerydev">Telegram</button>
+		<button class="btn" type="submit" formaction="https://vk.com/leenzerydev">VK</button>
+		<button class="btn" type="submit" formaction="https://bedrock-land.cc">BedrockLand</button>
+		<button class="btn" type="submit" formaction="https://www.youtube.com/channel/UCFeth1-5wYiqsXrp4imJulA">YouTube</button>
+		<button class="btn" type="submit" formaction="https://twitter.com/leenzerydev">Twitter</button>
+		<button class="btn" type="submit" formaction="https://www.instagram.com/leenzerydev/">Instagram</button>
+		<button class="btn" type="submit" formaction="https://www.twitch.tv/leenzerydev">Twitch</button>
+		<button class="btn" type="submit" formaction="https://discord.com/users/377067781830475776/">Discord</button>
+	</form>
 </body>
 </html>
