--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
 		<p align="center" style="padding-top: 5%;"><img class="av" src="https://avatars.githubusercontent.com/u/63073463?v=4" width="250" height="250"></p>
 		<div class="centered">leenzery</div>
 	</div>
-	<form align="center">
+	<div align="center">
+	<form>
         <button class="btn" type="submit" formaction="https://github.com/leenzerydev">Github</button>
 		<button class="btn" type="submit" formaction="https://t.me/leenzerydev">Telegram</button>
 		<button class="btn" type="submit" formaction="https://vk.com/leenzerydev">VK</button>
@@ -22,5 +23,6 @@
 		<button class="btn" type="submit" formaction="https://www.twitch.tv/leenzerydev">Twitch</button>
 		<button class="btn" type="submit" formaction="https://discord.com/users/377067781830475776/">Discord</button>
 	</form>
+	<div>
 </body>
 </html>
