беброк ленд эт вху?

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <button class="btn" type="submit" formaction="https://github.com/leenzerydev">Github</button>
 		<button class="btn" type="submit" formaction="https://t.me/leenzerydev">Telegram</button>
 		<button class="btn" type="submit" formaction="https://vk.com/leenzerydev">VK</button>
-		<button class="btn" type="submit" formaction="https://bedrock-land.cc">BedrockLand</button>
+		<button class="btn" type="submit" formaction="https://soully-lands.one">SoullyLands</button>
 		<button class="btn" type="submit" formaction="https://www.youtube.com/channel/UCFeth1-5wYiqsXrp4imJulA">YouTube</button>
 		<button class="btn" type="submit" formaction="https://twitter.com/leenzerydev">Twitter</button>
 		<button class="btn" type="submit" formaction="https://www.instagram.com/leenzerydev/">Instagram</button>
