--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
 	<link rel="stylesheet" type="text/css" href="css/main.css">
 	<meta charset="utf-8">
+  <meta name="keywords" content="Leenzery, LeenzeryDev, leenzery, SoullyLands, BedrockLand, leenzerydev">
+  <meta name="author" content="leenzery">
 	<title>leenzery</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 </head>
@@ -11,18 +13,41 @@
 		<p align="center" style="padding-top: 5%;"><img class="av" src="https://avatars.githubusercontent.com/u/63073463?v=4" width="250" height="250"></p>
 		<div class="centered">leenzery</div>
 	</div>
+	<div align="center" class="acrylic shadow">
+    джун ничегонеделания, пишу в основном на c# или java, мне 16, в данный момент разрабатываю uwp клиент для OpenVK и KaomojiUWP
+  </div>
 	<div align="center">
 	<form>
         <button class="btn" type="submit" formaction="https://github.com/leenzerydev">Github</button>
 		<button class="btn" type="submit" formaction="https://t.me/leenzerydev">Telegram</button>
 		<button class="btn" type="submit" formaction="https://vk.com/leenzerydev">VK</button>
-		<button class="btn" type="submit" formaction="https://soully-lands.one">SoullyLands</button>
+		<button class="btn" type="submit" formaction="https://openvk.uk/leenzerydev">OpenVK</button>
 		<button class="btn" type="submit" formaction="https://www.youtube.com/channel/UCFeth1-5wYiqsXrp4imJulA">YouTube</button>
-		<button class="btn" type="submit" formaction="https://twitter.com/leenzerydev">Twitter</button>
-		<button class="btn" type="submit" formaction="https://www.instagram.com/leenzerydev/">Instagram</button>
+		<button class="btn" type="submit" formaction="https://vepurovk.xyz/leenzerydev">VepurOVK</button>
 		<button class="btn" type="submit" formaction="https://www.twitch.tv/leenzerydev">Twitch</button>
-		<button class="btn" type="submit" formaction="https://discord.com/users/377067781830475776/">Discord</button>
+		
 	</form>
-	<div>
+	<button class="btn" onclick="openForm()">Discord</button>
+<div align="center" class="form-popup shadow" id="form">
+	  Discord: LeenzeryDev#0482
+	  <button class="btn" onclick="closeForm()">Закрыть</button>
+	</div>
+	<div align="center" class="acrylic shadow">
+    Мои проекты:<br>
+    <form>
+        <button class="btn" type="submit" formaction="https://github.com/leenzerydev/KaomojiUWP">KaomojiUWP(Open Source)</button>
+		    <button class="btn" type="submit" formaction="https://soully-lands.one">SoullyLands</button>
+        <button class="btn" type="submit" formaction="">позже чет ещё добавлю</button>
+	   </form>
+  </div>
+	
+<script>
+function openForm(){
+  document.getElementById("form").style.display = "block";
+}
+function closeForm(){
+  document.getElementById("form").style.display = "none";
+}
+</script>
 </body>
 </html>
