--- a/index.html
+++ b/index.html
@@ -34,6 +34,9 @@
 		<div style="padding: 2% 1%;" class="acrylic shadow" align="center">
 			<h1 class="lang" key="???"></h1>
 		</div>
+		<div style="padding: 2% 1%;" class="acrylic shadow" bis_skin_checked="1" align="center">
+			<img src="https://cdn4.telegram-cdn.org/file/kO-DYxEpRfZ01DzrqHblxClOz8Rh5UBDdJaPrXiztxP4xTHTtmJqIUHInSURbdpVrWYwC2JTSiZOjzKZbaLjyD0DTyVCdCKSCjgjo8LHKXCw9TZbRuDTONyHqigj-P-P_T-_nL1pDD-QTuiSFpMp3B2BFW6BFfYA7pDtWGrFw2uj3tyw9TtZIdP-Hox2D1UMjkEbvzfUFLBnD62gR6jHXtHopD1me9kbbeR9Oj2iH7HWI2dkZeoxHVMNwMuOybtaix8bwYVs2NGbUUtzYWWX8ODsZ_LfTNWiH6bzuT0UDdUz2PZrjw9dzIwUs_4TnxSWQWUG7wFs0rErVtm7lgdj6g.jpg"> 
+		</div>
 	</div>
 </body>
 <script src="js/main.js"></script>
