--- a/index.html
+++ b/index.html
@@ -19,23 +19,23 @@
 		</div>
 		<div style="padding: 2% 1%;" class="acrylic shadow" align="center">
 			<h1 class="lang" key="Links"></h1>
-			<button class="btn" onclick="location.href='https://github.com/leenzerydev';">Github</button>
-			<button class="btn" onclick="location.href='https://t.me/leenzerydev';">Telegram</button>
-			<button class="btn" onclick="location.href='https://openvk.uk/leenzerydev';">OpenVK</button>
-			<button class="btn" onclick="location.href='https://www.youtube.com/channel/UCFeth1-5wYiqsXrp4imJulA';">YouTube</button>
-			<button class="btn" onclick="location.href='https://vepurovk.xyz/leenzerydev';">VepurOVK</button>
-			<button class="btn" onclick="location.href='https://www.twitch.tv/leenzerydev';">Twitch</button>
+			<button class="btn" onclick="window.open('https://github.com/leenzerydev','_blank')">Github</button>
+			<button class="btn" onclick="window.open('https://t.me/leenzerydev','_blank')">Telegram</button>
+			<button class="btn" onclick="window.open('https://openvk.uk/leenzerydev','_blank')">OpenVK</button>
+			<button class="btn" onclick="window.open('https://www.youtube.com/channel/UCFeth1-5wYiqsXrp4imJulA','_blank')">YouTube</button>
+			<button class="btn" onclick="window.open('https://vepurovk.xyz/leenzerydev','_blank')">VepurOVK</button>
+			<button class="btn" onclick="window.open('https://www.twitch.tv/leenzerydev','_blank')">Twitch</button>
 		</div>
 		<div style="padding: 2% 1%;" class="acrylic shadow" align="center">
 			<h1 class="lang" key="Donate"></h1>
-			<button class="btn" onclick="location.href='https://new.donatepay.ru/@leenzerydev';">DonatePay</button>
-			<button class="btn" onclick="location.href='https://www.donationalerts.com/r/leenzery';">DonationAlerts</button>
+			<button class="btn" onclick="window.open('https://new.donatepay.ru/@leenzerydev','_blank')">DonatePay</button>
+			<button class="btn" onclick="window.open('https://www.donationalerts.com/r/leenzery','_blank')">DonationAlerts</button>
 		</div>
 		<div style="padding: 2% 1%;" class="acrylic shadow" align="center">
 			<h1 class="lang" key="???"></h1>
 		</div>
 		<div style="padding: 2% 1%;" class="acrylic shadow" bis_skin_checked="1" align="center">
-			<img src="https://cdn4.telegram-cdn.org/file/kO-DYxEpRfZ01DzrqHblxClOz8Rh5UBDdJaPrXiztxP4xTHTtmJqIUHInSURbdpVrWYwC2JTSiZOjzKZbaLjyD0DTyVCdCKSCjgjo8LHKXCw9TZbRuDTONyHqigj-P-P_T-_nL1pDD-QTuiSFpMp3B2BFW6BFfYA7pDtWGrFw2uj3tyw9TtZIdP-Hox2D1UMjkEbvzfUFLBnD62gR6jHXtHopD1me9kbbeR9Oj2iH7HWI2dkZeoxHVMNwMuOybtaix8bwYVs2NGbUUtzYWWX8ODsZ_LfTNWiH6bzuT0UDdUz2PZrjw9dzIwUs_4TnxSWQWUG7wFs0rErVtm7lgdj6g.jpg"> 
+			<img src="https://ermakov.gay/images/thumb/0/0e/OkabeKikuri.png/300px-OkabeKikuri.png"> 
 		</div>
 	</div>
 </body>
