--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
 			<button class="btn" onclick="window.open('https://www.youtube.com/channel/UCFeth1-5wYiqsXrp4imJulA','_blank')">YouTube</button>
 			<button class="btn" onclick="window.open('https://vepurovk.xyz/leenzerydev','_blank')">VepurOVK</button>
 			<button class="btn" onclick="window.open('https://www.twitch.tv/leenzerydev','_blank')">Twitch</button>
+			<button class="btn" onclick="window.open('https://t.me/leenzeryblog','_blank')">Telegram Channel</button>
 		</div>
 		<div style="padding: 2% 1%;" class="acrylic shadow" align="center">
 			<h1 class="lang" key="Donate"></h1>
