--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 			<h1 class="lang" key="Links"></h1>
 			<button class="btn" onclick="window.open('https://github.com/leenzerydev','_blank')">Github</button>
 			<button class="btn" onclick="window.open('https://t.me/leenzerydev','_blank')">Telegram</button>
-			<button class="btn" onclick="window.open('https://openvk.uk/leenzerydev','_blank')">OpenVK</button>
+			<button class="btn" onclick="window.open('https://ovk.to/leenzerydev','_blank')">OpenVK</button>
 			<button class="btn" onclick="window.open('https://www.youtube.com/channel/UCFeth1-5wYiqsXrp4imJulA','_blank')">YouTube</button>
 			<button class="btn" onclick="window.open('https://vepurovk.xyz/leenzerydev','_blank')">VepurOVK</button>
 			<button class="btn" onclick="window.open('https://www.twitch.tv/leenzerydev','_blank')">Twitch</button>
