--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 			<button class="btn" onclick="window.open('https://www.donationalerts.com/r/leenzery','_blank')">DonationAlerts</button>
 		</div>
 		<div style="padding: 2% 1%;" class="acrylic shadow" align="center">
-			<h1 class="lang" key="???"></h1>
+			<img src="https://spotify-github-profile.vercel.app/api/view?uid=a97y788fh1ftxntus0etruby6&cover_image=true&theme=default&show_offline=true&background_color=121212&interchange=true&bar_color_cover=false"> 
 		</div>
 		<div style="padding: 2% 1%;" class="acrylic shadow" bis_skin_checked="1" align="center">
 			<img src="https://ermakov.gay/images/thumb/0/0e/OkabeKikuri.png/300px-OkabeKikuri.png"> 
