--- a/index.html
+++ b/index.html
@@ -2,17 +2,17 @@
 <html>
 <head>
 	<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-	<link rel="stylesheet" type="text/css" href="css/main.css">
-	<meta charset="utf-8">
-  	<meta name="keywords" content="Leenzery, LeenzeryDev, leenzery, SoullyLands, BedrockLand, leenzerydev">
-  	<meta name="author" content="leenzery">
+	<link rel="stylesheet" type="text/css" href="css/main.css"/>
+	<meta charset="utf-8"/>
+  	<meta name="keywords" content="Leenzery, LeenzeryDev, leenzery, SoullyLands, BedrockLand, leenzerydev"/>
+  	<meta name="author" content="leenzery"/>
 	<title>leenzery</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 </head>
 <body>
 	<div class="acrylic shadow" style="padding: 4% 6%;">
 		<div class="acrylic shadow" style="float: left; width: 30%; padding: 4% 6%;">
-			<p><img class="av" src="https://avatars.githubusercontent.com/u/63073463?v=4" width="75%" height="75%"></p>
+			<p><img class="av" src="https://avatars.githubusercontent.com/u/63073463?v=4" width="75%" height="75%"/></p>
 			leenzery
 			<p style="font-size:16px;" class="lang" key="desc"></p>
 				<button class="translate btn" id="ru">Russian</button>, <button class="translate btn" id="uk">Ukrainian</button>, <button class="translate btn" id="en">English</button>
@@ -33,10 +33,10 @@
 			<button class="btn" onclick="window.open('https://www.donationalerts.com/r/leenzery','_blank')">DonationAlerts</button>
 		</div>
 		<div style="padding: 2% 1%;" class="acrylic shadow" align="center">
-			<img src="https://spotify-github-profile.vercel.app/api/view?uid=a97y788fh1ftxntus0etruby6&cover_image=true&theme=default&show_offline=true&background_color=121212&interchange=true&bar_color_cover=false"> 
+			<img id="spotify" src="https://spotify-github-profile.vercel.app/api/view.svg?uid=a97y788fh1ftxntus0etruby6&cover_image=true&theme=default&show_offline=true&background_color=121212&interchange=true&bar_color_cover=true"/> 
 		</div>
 		<div style="padding: 2% 1%;" class="acrylic shadow" bis_skin_checked="1" align="center">
-			<img src="https://ermakov.gay/images/thumb/0/0e/OkabeKikuri.png/300px-OkabeKikuri.png"> 
+			<img src="https://ermakov.gay/images/thumb/0/0e/OkabeKikuri.png/300px-OkabeKikuri.png"/> 
 		</div>
 	</div>
 </body>
